<resources>
    <string name="app_name">CoronaCount</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">STAY HOME STAY SAFE</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_earth_status">Earth status</string>
    <string name="menu_countrywise_status">Country wise status</string>
    <string name="menu_advices">Advices/tips</string>
    <string name="menu_symtoms">COVID-19 Symtoms</string>
    <string name="menu_faq">FAQs</string>


    <string name="home_second">Home Second</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_google_map">Map</string>
</resources>
